--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ Creative Technologist</pre></h1>
             </button>
         </div> 
         <div class="circle-frame">
-            <img src="dp.jpg" alt="Button Image" class="button-image">
+            <img src="icons_images/dp.jpg" alt="Button Image" class="button-image">
         </div>
         
         
@@ -64,7 +64,7 @@ Creative Technologist</pre></h1>
     <section class="featured-cards-section">
         <div class="featured-container">
             <div class="news-container">
-                <img src="below1.jpg" alt="Card Image" class="card-image" style="padding: 10px;">
+                <img src="icons_images/below1.jpg" alt="Card Image" class="card-image" style="padding: 10px;">
                 <div class="card-content">
                     <h3>Designing Dashboards</h3>
                     <div class="subheading1">
@@ -75,7 +75,7 @@ Creative Technologist</pre></h1>
                 </div>
             </div>
             <div class="news-container">
-                <img src="below2.jpg" alt="Card Image" class="card-image "style="padding: 10px;">
+                <img src="icons_images/below2.jpg" alt="Card Image" class="card-image "style="padding: 10px;">
                 <div class="card-content">
                     <h3>Vibrant Potraits of 2020</h3>
                    <div class ="subheading1"><span class="date-badge">2020</span>  
@@ -83,7 +83,7 @@ Creative Technologist</pre></h1>
                 </div> <p>In 2020 , we got different potraits which are quite fascinating to watch  </p>  </div>
             </div>
             <div class="news-container">
-                <img src="below3.jpg" alt="Card Image" class="card-image"  style="padding: 10px;">
+                <img src="icons_images/below3.jpg" alt="Card Image" class="card-image"  style="padding: 10px;">
                 <div class="card-content">
                     <h3>36 Days of Malayalam type</h3>
                     <div class="subheading3"><span class="date-badge">2021</span>  
@@ -103,16 +103,16 @@ Creative Technologist</pre></h1>
         <div class="container">
           <div class="logo-container">
             <a href="https://twitter.com/your_twitter_username" target="_blank" rel="noopener noreferrer">
-              <img src="linkedin.png" alt="Twitter Logo" class="logo">
+              <img src="icons_images/linkedin.png" alt="Twitter Logo" class="logo">
             </a>
             <a href="https://www.facebook.com/your_facebook_page" target="_blank" rel="noopener noreferrer">
-              <img src="twitterr.png" alt="Facebook Logo" class="logo">
+              <img src="icons_images/twitterr.png" alt="Facebook Logo" class="logo">
             </a>
             <a href="https://www.instagram.com/your_instagram_handle" target="_blank" rel="noopener noreferrer">
-              <img src="insta.png" alt="Instagram Logo" class="logo">
+              <img src="icons_images/insta.png" alt="Instagram Logo" class="logo">
             </a>
             <a href="https://github.com/your_github_username" target="_blank" rel="noopener noreferrer">
-              <img src="facebook.png" style="height: 40px;" alt="GitHub Logo" class="logo">
+              <img src="icons_images/facebook.png" style="height: 40px;" alt="GitHub Logo" class="logo">
             </a>
           </div>
           <p class="copyright">&copy; 2024 Your Name or Company. All rights reserved.</p>
